# hms-solana

./: ADVANCED_FEATURES_SUMMARY.md  Anchor.toml  IMPLEMENTATION_SUMMARY.md  README.md  client-sdk-example.ts
programs/hms-solana/: Cargo.toml
programs/hms-solana/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/hms-solana/src/instructions/: add_record.rs  create_hms_nft.rs  cross_device_sync.rs  dao_governance.rs  delete_record.rs  emergency_access.rs  erc20.rs  erc721.rs  grant_access.rs  init_profile.rs  mod.rs  read_record.rs  revoke_access.rs  update_record.rs  wearable_integration.rs  zk_proof.rs
programs/hms-solana/src/state/: access.rs  dao_governance.rs  emergency_access.rs  hms_nft.rs  mod.rs  profile.rs  record.rs  sync_state.rs  wearable_device.rs  zk_proof.rs
tests/: hms-solana.ts
